--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy
+numpy==1.23.4
 pytz
 pandas
 requests
@@ -8,6 +8,7 @@ aiohttp==3.8
 arrow
 xlrd
 pytdx==1.67
+backtrader_plotting
 backtrader
 bcolz
 mpl_finance
